# fastapi-supabase-starter

./: .env.sample  README.md  fastapi_supabase_starter.db  main.py  pyproject.toml  requirements.txt
core/: config.py  dbutils.py  jwtutils.py
models/: models.py
routers/: user.py
