[project]
name = "fastapi-supabase-starter"
version = "1.0.0"
description = "A starter template for building secure and scalable FastAPI applications with Supabase authentication integration. This template provides a solid foundation for modern web applications, combining the power of FastAPI's high-performance framework with Supabase's robust authentication system."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
   {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
keywords = [
    "fastapi",
    "supabase",
    "authentication",
    "backend",
    "api",
    "python",
    "web-framework",
    "starter-template",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Framework :: FastAPI",
]
dependencies = [
    "anyio==4.3.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "ecdsa==0.19.1",
    "exceptiongroup==1.2.1",
    "fastapi==0.95.1",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "idna==3.7",
    "pyasn1==0.6.1",
    "pydantic==1.10.15",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "python-jose>=3.3.0",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.30",
    "starlette==0.26.1",
    "typing-extensions==4.11.0",
    "urllib3>=2.2.3",
    "uvicorn==0.22.0",
]

[project.urls]
Homepage = "https://github.com/ysskrishna/fastapi-supabase-starter"
Documentation = "https://github.com/ysskrishna/fastapi-supabase-starter#readme"
Repository = "https://github.com/ysskrishna/fastapi-supabase-starter.git"
Issues = "https://github.com/ysskrishna/fastapi-supabase-starter/issues"
"Bug Tracker" = "https://github.com/ysskrishna/fastapi-supabase-starter/issues"